<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AQT Score</string>
    <string name="take_photo">Take Photo</string>
    <string name="select_image">Select Image</string>
    <string name="analyze_target">Analyze Target</string>
    <string name="reset">Reset</string>
    <string name="total_score">Total Score: %d</string>
    <string name="holes_detected">Holes Detected: %d</string>
    <string name="camera_permission_required">Camera permission is required to take photos</string>
    <string name="storage_permission_required">Storage permission is required to select images</string>
</resources>
